# photon

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.win32  NEWS  README  autogen.sh  configure.ac  wscript
doc/: .gitignore  Doxyfile.vds_c  Makefile.am  Makefile.win32  VDSF_C++_API.chm  VDSF_C_API.chm  doxyfile.photon_c  doxyfile.photon_c.in  doxyfile.photon_c.win32  doxyfile.photon_cpp  doxyfile.photon_cpp.in  doxyfile.photon_cpp.win32  doxyfile.vds_c.in  doxyfile.vds_c.win32  doxyfile.vds_cpp.in  doxyfile.vds_cpp.win32  wscript_build
m4/: .gitignore  COPYING_Macros  Makefile.am  ac_c_asm.m4  ac_c_cc_type.m4  ac_c_printf_ptrdiff_t.m4  ac_c_printf_size_t.m4  ac_func_sem_init.m4  ac_jni_include_dir.m4  etr_struct_semun.m4  wscript
src/: .gitignore  LaunchQuasar.sh  LaunchQuasarKeep.sh  LaunchWatchdog.sh  LaunchWatchdog.vbs  LaunchWatchdogKeep.sh  Makefile.Common.am  Makefile.am  Makefile.win32  config-win32.h  photon.dsw  photon.sln  photon.vs2005.sln  photon.vs2008.sln  vdsf.dsw  wscript  wscript_build
src/API/: .gitignore  API.dsp  API.dsw  API.vcproj  API.vs2005.vcproj  API.vs2008.vcproj  CommonObject.c  CommonObject.h  Connector.c  Connector.h  DataDefinition.c  DataDefinition.h  FastMap.c  FastMap.h  Folder.c  Folder.h  HashMap.c  HashMap.h  KeyDefinition.c  KeyDefinition.h  Lifo.c  Lifo.h  ListReaders.h  Makefile.am  Makefile.win32  Map.c  Map.h  Process.c  Process.h  ProxyObject.h  QuasarCommon.h  Queue.c  Queue.h  Session.c  Session.h  Standalone.c  WatchdogCommon.h  api.c  api.h  info.pb-c.c  (+2 more)
src/BuildTools/: BuildTools.dsw  Makefile.am  Makefile.win32  analyser.cpp  analyser.h  analyserTest.cpp  analyserTest.h  errorParser.cpp  errorParser.dsp  inputHeader.cpp  inputHeader.h  outputFiles.cpp  outputFiles.h
src/C++/: .gitignore  CPP.dsp  CPP.vcproj  CPP.vs2005.vcproj  CPP.vs2008.vcproj  DataDefBuilderODBC.cpp  DataDefBuilderUser.cpp  DataDefinition.cpp  Definition.cpp  DefinitionODBCSimple.cpp  Exception.cpp  FastMap.cpp  FastMapEditor.cpp  FieldDefinition.cpp  FieldDefinitionODBC.cpp  FieldDefinitionUser.cpp  Folder.cpp  HashMap.cpp  KeyDefBuilderODBC.cpp  KeyDefBuilderUser.cpp  KeyDefinition.cpp  KeyDefinitionODBC.cpp  KeyDefinitionUser.cpp  Lifo.cpp  Makefile.am  Makefile.win32  Process.cpp  Queue.cpp  Session.cpp
src/CS/: PhotonLib.vs2005.sln  PhotonLib.vs2008.sln  PhotonTest.sln
src/Common/: .gitignore  Barrier.h  Common.dsp  Common.dsw  Common.h  Common.vcproj  Common.vs2005.vcproj  Common.vs2008.vcproj  ConfigFile.c  ConfigFile.h  DirAccess.c  DirAccess.h  ErrorHandler.c  ErrorHandler.h  Makefile.am  Makefile.win32  MemoryFile.c  MemoryFile.h  MemoryFile.inl  Options.c  Options.h  ProcessLock.c  ProcessLock.h  ProcessLock.inl  ThreadLock.c  ThreadLock.h  ThreadLock.inl  Timer.c  Timer.h  asctime_r.c  ctime_r.c  localtime_r.c  locking.txt  memcmp.c  memset.c  nanosleep.c  private.h  spinlock.c  strnlen.c  tzfile.h  (+1 more)
src/CrashRecovery/: Makefile.am
src/Demo/: Makefile.am
src/Engine/: .gitignore  BlockGroup.c  BlockGroup.h  DataType.h  Engine.dsp  Engine.dsw  Engine.h  Folder.c  Folder.h  GenerateError.dsp  Hash.c  Hash.h  HashMap.c  HashMap.h  InitEngine.c  InitEngine.h  LinkNode.h  LinkedList.c  LinkedList.h  LinkedList.inl  ListErrors.h  LogFile.c  LogFile.h  Makefile.am  Makefile.win32  Map.c  Map.h  MemBitmap.c  MemBitmap.h  MemBitmap.inl  MemoryAllocator.c  MemoryAllocator.h  MemoryHeader.h  MemoryObject.c  MemoryObject.h  PageGroup.c  PageGroup.h  Process.c  Process.h  ProcessManager.c  (+15 more)
src/Errors/: Makefile.am  Makefile.win32  options.xml  photon.xml  vdsf.xml
src/Examples/: HashMap.c  HashMapLoop.c  Makefile  Queue.h  QueueIn.c  QueueOut.c  QueueWork.c  README  RunQueue.sh  RunQueue.vbs  iso_3166.h  iso_3166.tab  quasar-config.example.xml  vdswd-config.example
src/Java/: .gitignore  ConfigureJNI.py  Makefile.am  SConstruct  jni_arrayListSerializer.c  jni_baseQueue.c  jni_dataDefBuilderODBC.c  jni_dataDefBuilderUser.c  jni_dataDefinition.c  jni_dataRecord.c  jni_definition.c  jni_definitionType.c  jni_fieldDef.c  jni_fieldType.c  jni_folder.c  jni_folder.c.old  jni_folderEntry.c  jni_hashmap.c  jni_info.c  jni_keyDefBuilderODBC.c  jni_keyDefBuilderUser.c  jni_keyDefODBC.c  jni_keyDefinition.c  jni_keyType.c  jni_objDefinition.c  jni_objStatus.c  jni_objectType.c  jni_photon.c  jni_photon.h  jni_process.c  jni_queue.c  jni_rawQueue.c  jni_session.c  org_photon_ArrayListSerializer.h  org_photon_DataDefBuilderODBC.h  org_photon_DataDefBuilderUser.h  org_photon_DataDefinition.h  org_photon_DataRecord.h  org_photon_DataRecord_FieldDescription.h  org_photon_Definition.h  (+21 more)
src/Locking/: Makefile  Makefile.am
src/Nucleus/: .gitignore  BlockGroup.c  BlockGroup.h  Cursor.c  Cursor.h  DataType.h  Definitions.h  Engine.dsp  Engine.h  FastMap.c  FastMap.h  Folder.c  Folder.h  Hash.c  Hash.h  HashCommon.h  HashMap.c  HashMap.h  HashTx.c  HashTx.h  Info.h  InitEngine.c  InitEngine.h  LinkNode.h  LinkedList.c  LinkedList.h  LinkedList.inl  LogFile.c  LogFile.h  Makefile.am  Makefile.win32  Map.c  Map.h  MemBitmap.c  MemBitmap.h  MemBitmap.inl  MemoryAllocator.c  MemoryAllocator.h  MemoryHeader.h  MemoryObject.c  (+30 more)
src/Proto/: .gitignore  Makefile.am  info.proto  t1.awk  t2.awk
src/Python/: .gitignore  Makefile.am  Makefile.in  PhotonWrap.c  Process.h  Session.c  Session.h  autogen.sh  configure.ac  setup.py  test.py
src/Quasar/: .gitignore  Acceptor.c  Acceptor.h  Config.c  Config.h  Design.txt  LogMsg.c  LogMsg.h  Makefile.am  Makefile.win32  MemoryManager.c  MemoryManager.h  Quasar.c  Quasar.h  ShMemHandler.c  ShMemHandler.h  VDSHandler.c  VDSHandler.h  VerifyCommon.h  VerifyFastMap.c  VerifyFolder.c  VerifyHash.c  VerifyHashMap.c  VerifyHashTx.c  VerifyList.c  VerifyMemObj.c  VerifyQueue.c  VerifyShMem.c  VerifyShMem.h  VerifyVDS.c  VerifyVDS.h  Watchdog.c  Watchdog.dsp  Watchdog.h  qsrMain.c  quasar.1  quasar.dsp  quasar.info  quasar.rc  quasar.texi  (+11 more)
src/Tests/: .gitignore  InjectErrorsShMem.cpp  InjectErrorsVDS.cpp  Interrupted.cpp  Makefile.Win32  Makefile.am  OutOfMemory.cpp  OutOfMemory.sh  PrintError.h  RunTests.vbs  (+8 more)
(+4328 files in other folders)
